--- a/app/src/main/res/layout/fragment_buy.xml
+++ b/app/src/main/res/layout/fragment_buy.xml
@@ -1,14 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="10dp"
+    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".Fragments.BuyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="69dp"
+            android:layout_centerInParent="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_logo_green" />
+        <TextView
+            android:textStyle="bold"
+            android:lineHeight="24dp"
+            android:textSize="16dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="10dp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="The Best Guitar For The Best You"
+            />
+    <RelativeLayout
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="35dp"
+        android:layout_width="match_parent"
+        android:layout_height="24dp">
+        <ImageView
+            android:id="@+id/imgFilter"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_filter"
+            android:layout_width="24dp"
+            android:layout_height="24dp"/>
+        <LinearLayout
+            android:gravity="center"
+            android:weightSum="3"
+            android:layout_toLeftOf="@id/imgSort"
+            android:layout_toRightOf="@id/imgFilter"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
+                android:lineHeight="11dp"
+                android:textSize="14dp"
+                android:text="Price"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+
+                android:textColor="@color/colorPrimary"
+                android:lineHeight="11dp"
+                android:textAlignment="center"
+                android:textSize="14dp"
+                android:text="Price"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:textColor="@color/colorPrimary"
+                android:lineHeight="11dp"
+                android:textAlignment="center"
+                android:textSize="14dp"
+                android:text="Price"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imgSort"
+            android:layout_alignParentRight="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_sort"
+            android:layout_width="24dp"
+            android:layout_height="24dp"/>
+    </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvProducts"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
