--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,14 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".Fragments.CartFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:id="@+id/rltToolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginTop="20dp"
+        android:paddingHorizontal="40dp">
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_logo_white" />
+
+        <ImageView
+            android:id="@+id/imgCartOpenSetting"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_drawer" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tvYourGuitar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rltToolbar"
+        android:layout_marginVertical="20dp"
+        android:gravity="center"
+        android:lineHeight="20dp"
+        android:text="YOUR ORDER (10)"
+        android:textColor="@color/white"
+        android:textSize="19dp"
+        android:textStyle="bold" />
+    <RelativeLayout
+        android:layout_marginTop="20dp"
+        android:background="@drawable/custom_border_top_shape"
+        android:layout_below="@id/tvYourGuitar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:alpha="0.2"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_logo_green"
+            />
+        <androidx.recyclerview.widget.RecyclerView
+            android:paddingHorizontal="30dp"
+            android:paddingTop="20dp"
+            android:id="@+id/rcvCart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
