--- a/app/src/main/res/layout/item_promotion_login_screen.xml
+++ b/app/src/main/res/layout/item_promotion_login_screen.xml
@@ -10,13 +10,19 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/imgItemPromotion"
-            android:scaleType="centerCrop"
-            android:layout_width="191dp"
-            android:layout_height="136dp"
-            android:src="@drawable/img_4"
-            />
+        <androidx.cardview.widget.CardView
+            app:cardCornerRadius="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/imgItemPromotion"
+                android:scaleType="centerCrop"
+                android:layout_width="191dp"
+                android:layout_height="136dp"
+                android:src="@drawable/img_4"
+                />
+        </androidx.cardview.widget.CardView>
+
         <TextView
             android:layout_gravity="center"
             android:id="@+id/tvDescription"
