--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -29,39 +29,267 @@
             android:src="@drawable/ic_drawer" />
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tvYourGuitar"
+    <LinearLayout
+        android:id="@+id/llTab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_below="@id/rltToolbar"
-        android:layout_marginVertical="20dp"
-        android:gravity="center"
-        android:lineHeight="20dp"
-        android:text="YOUR ORDER (10)"
-        android:textColor="@color/white"
-        android:textSize="19dp"
-        android:textStyle="bold" />
-    <RelativeLayout
-        android:layout_marginTop="20dp"
-        android:background="@drawable/custom_border_top_shape"
-        android:layout_below="@id/tvYourGuitar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:alpha="0.2"
-            android:scaleType="centerCrop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_logo_green"
-            />
-        <androidx.recyclerview.widget.RecyclerView
-            android:paddingHorizontal="30dp"
-            android:paddingTop="20dp"
-            android:id="@+id/rcvCart"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent" />
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
-    </RelativeLayout>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/cartTabColor"
+            android:gravity="center"
+            android:lineHeight="20dp"
+            android:text="DELIVERY"
+            android:textColor="@color/white"
+            android:textSize="19dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:lineHeight="20dp"
+            android:text="GO TO STORE"
+            android:textColor="@color/white"
+            android:textSize="19dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/llTab"
+        android:background="@color/white">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    app:cardCornerRadius="10dp">
+
+                    <LinearLayout
+                        android:layout_width="367dp"
+                        android:layout_height="164dp"
+                        android:background="@drawable/img_19"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:weightSum="2">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:paddingStart="20dp">
+
+                            <ImageView
+                                android:id="@+id/imgPin"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:layout_centerVertical="true"
+                                android:src="@drawable/img_20" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="20dp"
+                                android:layout_toRightOf="@id/imgPin"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="20dp"
+                                    android:text="Gz Musical CMT8"
+                                    android:textColor="@color/colorPrimary"
+                                    android:textSize="16dp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="200dp"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="20dp"
+                                    android:text="241 Xuan Thuy, Dich Vong Hau, Cau Giay, Hanoi"
+                                    android:textColor="@color/textColor"
+                                    android:textSize="12dp" />
+                            </LinearLayout>
+
+                            <ImageView
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerInParent="true"
+                                android:layout_marginEnd="30dp"
+                                android:src="@drawable/ic_edit_location" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/rlCustomer"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:paddingStart="20dp">
+
+                            <View
+                                android:layout_width="279dp"
+                                android:layout_height="1dp"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginEnd="25dp"
+                                android:background="#33000000" />
+
+                            <LinearLayout
+                                android:id="@+id/view"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:layout_centerVertical="true"
+                                android:gravity="center">
+
+                                <View
+                                    android:layout_width="10dp"
+                                    android:layout_height="10dp"
+                                    android:background="@drawable/custom_eslipe" />
+                            </LinearLayout>
+
+
+                            <LinearLayout
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="20dp"
+                                android:layout_toRightOf="@id/view"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="20dp"
+                                    android:text="Hanoi University"
+                                    android:textColor="@color/colorPrimary"
+                                    android:textSize="16dp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="200dp"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="20dp"
+                                    android:text="Km9, Nguyen Trai Street, Nam Tu Liem, Hanoi"
+                                    android:textColor="@color/textColor"
+                                    android:textSize="12dp" />
+                            </LinearLayout>
+
+                            <ImageView
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerInParent="true"
+                                android:layout_marginEnd="30dp"
+                                android:src="@drawable/ic_edit_location" />
+                        </RelativeLayout>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:paddingStart="20dp">
+
+                <TextView
+                    android:layout_width="137dp"
+                    android:layout_height="23dp"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/custom_button_oval"
+                    android:gravity="center"
+                    android:lineHeight="20dp"
+                    android:text="Your order"
+                    android:textColor="@color/white"
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="23dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="25dp"
+                    android:gravity="center"
+                    android:lineHeight="20dp"
+                    android:text="add more"
+                    android:textColor="#DE8737"
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/custom_rcv_border"
+                />
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="left"
+                android:layout_width="137dp"
+                android:layout_height="23dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/custom_button_oval"
+                android:gravity="center"
+                android:lineHeight="20dp"
+                android:text="Payment Method"
+                android:textColor="@color/white"
+                android:textSize="14dp"
+                android:textStyle="bold" />
+                <View
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="@drawable/ic_logo_green"
+                    />
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="left"
+                android:layout_width="137dp"
+                android:layout_height="23dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/custom_button_oval"
+                android:gravity="center"
+                android:lineHeight="20dp"
+                android:text="Amount Detail"
+                android:textColor="@color/white"
+                android:textSize="14dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
