--- a/app/src/main/res/layout/item_product_layout.xml
+++ b/app/src/main/res/layout/item_product_layout.xml
@@ -19,6 +19,7 @@
             />
     </androidx.cardview.widget.CardView>
     <TextView
+        android:id="@+id/tvProductName"
         android:textAlignment="center"
         android:layout_margin="10dp"
         android:textStyle="bold"
