--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -211,7 +211,7 @@
                 android:hint="Last Name">
 
                 <EditText
-                    android:id="@+id/edtlastName"
+                    android:id="@+id/edtLastName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
