--- a/app/src/main/res/layout/item_product_layout.xml
+++ b/app/src/main/res/layout/item_product_layout.xml
@@ -14,7 +14,7 @@
             android:id="@+id/imgProducts"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="400dp"
             android:src="@drawable/img_16"
             />
     </androidx.cardview.widget.CardView>
